...
                            <constraint firstItem="Tay-zf-2cO" firstAttribute="trailing" secondItem="Crr-c4-E2K" secondAttribute="trailing" id="Dr9-Vh-6rs"/>
                            <constraint firstItem="Tay-zf-2cO" firstAttribute="bottom" secondItem="Crr-c4-E2K" secondAttribute="bottom" id="JtS-0c-RLe"/>
                            <constraint firstItem="Tay-zf-2cO" firstAttribute="top" secondItem="Crr-c4-E2K" secondAttribute="top" id="Rbu-EE-1H8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Crr-c4-E2K"/>
                    </view>
                    <navigationItem key="navigationItem" title="Help" id="n9i-of-E2B"/>
                    <connections>
                        <outlet property="webView" destination="Tay-zf-2cO" id="wPX-ng-Wt0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wEI-Eo-xus" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="iGK-7Y-neB" firstAttribute="top" secondItem="m5L-DF-6QP" secondAttribute="bottom" constant="15" id="aTv-iq-LHl"/>
                            <constraint firstItem="iGK-7Y-neB" firstAttribute="leading" secondItem="6yB-Vl-0Mx" secondAttribute="leading" id="d4b-R2-SUf"/>
                            <constraint firstItem="m5L-DF-6QP" firstAttribute="centerX" secondItem="Jw0-bR-Sny" secondAttribute="centerX" id="d67-Cy-cFO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6yB-Vl-0Mx"/>
                    </view>
                    <navigationItem key="navigationItem" title="City screen" id="Zpi-dg-xz2"/>
                    <connections>
                        <outlet property="cityName" destination="kcu-Ej-HFy" id="B3T-dO-I0x"/>
                        <outlet property="humidityLabel" destination="sO0-fT-TbR" id="TrI-BY-n6h"/>
                        <outlet property="rainChangesLabel" destination="mX5-Rj-oWP" id="KR7-np-MVV"/>
                        <outlet property="tempLabel" destination="7gh-bh-m7k" id="rwP-yH-7Sp"/>
                        <outlet property="weatherIcon" destination="5Ql-Xp-pBf" id="iwV-u0-Q9O"/>
...
                        <subviews>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="G9V-eT-T0y">
                                <rect key="frame" x="0.0" y="128" width="414" height="664"/>
                            </mapView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qU0-v1-mEB">
                                <rect key="frame" x="162" y="812" width="90" height="30"/>
                                <state key="normal" title="Add Location"/>
                                <connections>
                                    <action selector="addLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7gK-Qx-giI"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cpw-jl-DAw">
                                                    <rect key="frame" x="379" y="20" width="20" height="23"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="23" id="29B-Zd-XKb"/>
                                                        <constraint firstAttribute="width" constant="20" id="POf-TP-GSJ"/>
                                                    </constraints>
                                                    <state key="normal" image="trash" catalog="system"/>
                                                </button>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="e8k-nF-cZR" firstAttribute="top" secondItem="3qM-kC-Hx0" secondAttribute="bottom" constant="12" id="0v3-XP-6zQ"/>
                                                <constraint firstItem="Cpw-jl-DAw" firstAttribute="top" secondItem="dMh-Lw-Vth" secondAttribute="topMargin" constant="9" id="1Kw-1t-rle"/>
                                                <constraint firstItem="03h-Pd-KZQ" firstAttribute="leading" secondItem="e8k-nF-cZR" secondAttribute="trailing" constant="25" id="4HJ-8F-oka"/>
...
                            <constraint firstItem="S9s-ZS-630" firstAttribute="top" secondItem="kCK-fw-6rf" secondAttribute="top" id="4kH-H4-c4I"/>
                            <constraint firstItem="S9s-ZS-630" firstAttribute="leading" secondItem="kCK-fw-6rf" secondAttribute="leading" id="Tcz-xI-5rA"/>
                            <constraint firstItem="kCK-fw-6rf" firstAttribute="bottom" secondItem="S9s-ZS-630" secondAttribute="bottom" id="dM7-or-BBh"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="kCK-fw-6rf"/>
                    </view>
                    <navigationItem key="navigationItem" title="Location List" id="Tpy-HA-tGg">
                        <barButtonItem key="leftBarButtonItem" title="Help" id="nlL-b5-MQ7">
                            <connections>
                                <segue destination="vaE-Ae-vKn" kind="show" id="Ugu-ao-JP4"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem image="plus" catalog="system" id="ssU-sD-dcQ">
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="xux-nl-RIh"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="trash" catalog="system" id="cbo-9z-HS3">
                                <connections>
...
