...

        self.mapView.addAnnotation(annotation)
    }

    @IBAction func addLocation(_ sender: Any)
    {
        let alert = UIAlertController.init(title: "Add location title", message: "", preferredStyle: .alert)
        let action = UIAlertAction.init(title: "Add", style: .default) { [weak self](UIAlertAction) in
            
            if let textFields = alert.textFields,
                let textField = textFields[0] as? UITextField,
                let textFieldString = textField.text as? String
            {
                if let annotation = self?.mapView.annotations.first
...
