...
        self.locatonList = CoreDatamanager.shared.fetchAllLocationList()
        self.locationListTableVIew.reloadData()
    }
    
    @IBAction func deleteAllSavedLocations(_ sender: Any)
    {
        let alert = UIAlertController.init(title: "Alert", message: "This will delete all saved locaions.", preferredStyle: .alert)
        let action = UIAlertAction.init(title: "Delete", style: .default) { [weak self](UIAlertAction) in
            
            CoreDatamanager.shared.removeAllLocationDetails(using: self?.locatonList ?? [])
            self?.locatonList.removeAll()
            self?.locationListTableVIew.reloadData()
        }
        action.isEnabled = true
...
